--- a/about.html
+++ b/about.html
@@ -56,5 +56,15 @@ File:
 </div><div id="spacer" style="height: 20px"></div><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sc2share.com/" data-text="SC2Share.com hosts Starcraft 2 replay files under tiny URLs, no login required" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 </form>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40474675-1', 'sc2share.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
