--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Share Starcraft 2 replays at sc2share.com</title>
+<title>Upload Starcraft 2 replays at sc2share.com</title>
 <link rel="stylesheet" href="/static/style.css" type="text/css">
 </head>
 <body>
@@ -8,7 +8,7 @@
 <div id="content">
 <div id="spacer"></div>
 <p>
-<span id="sendmsg" style="font-size: 36px">Share a Starcraft II replay</span>
+<span id="sendmsg" style="font-size: 36px">Upload a Starcraft II replay</span>
 <p>
 <form action="{{ upload_url }}" method="post" enctype="multipart/form-data">
 File:
@@ -17,13 +17,12 @@ File:
 </form>
 <div id="spacer" style="height: 70px"></div>
 <div id="explanation">
-We host Starcraft II replay files under a tiny URL that can be used in
+We host Starcraft II replay files under a tiny URL that can be shared in
 forums, email and Twitter.
 <p>
-We're like bit.ly or Twitpic for Starcraft replay
-files.
+We're like bit.ly or Twitpic for Starcraft replay files.
 <p>
-<a href="/about">Read the manifesto</a>
+<a href="/about">Read more about us</a>
 <p>
 Less is more.
 </div>
@@ -33,5 +32,15 @@ Less is more.
 <div id="spacer" style="height: 20px"></div>
 <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sc2share.com/" data-text="SC2Share.com hosts Starcraft 2 replay files under tiny URLs, no login required" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 </center>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40474675-1', 'sc2share.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
