Minor fine-tunage

--- a/download.html
+++ b/download.html
@@ -41,15 +41,16 @@
 <div id="spacer"></div>
 <p>
 <span id="sendmsg">Download SC2 Replay</span>
-<p>
-You are about to download "{{download_filename}}".
+<p style="font-size: 19px">
+Click below to download the file<br>
+<span class="filename">{{download_filename}}</span>
 <p>
 <span id="shorturl"><a class="download" href="http://{{ baseurl }}/{{ download_url }}">Download</a></span>
 <div id="spacer" style="height: 20px"></div>
 <p>
 <span id="subtext"></span>
 <div id="spacer" style="height: 50px"></div>
-<span id="sendmsg">Share another Starcraft II replay?</span>
+<span id="sendmsg">Upload a new Starcraft II replay</span>
 <p>
 <form action="{{ upload_url }}" method="post" enctype="multipart/form-data">
 File:
