More layout tweaks

--- a/download.html
+++ b/download.html
@@ -38,11 +38,10 @@
 <body>
 <center>
 <div id="content">
-<div id="spacer"></div>
 <p>
 <span id="sendmsg">Download SC2 Replay</span>
 <p style="font-size: 19px">
-Click below to download the file<br>
+Click the button below to download the file<br>
 <span class="filename">{{download_filename}}</span>
 <p>
 <span id="shorturl"><a class="download" href="http://{{ baseurl }}/{{ download_url }}">Download</a></span>
@@ -59,7 +58,6 @@ File:
 </form>
 
 </div>
-<div id="spacer" style="height: 20px"></div><a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sc2share.com/" data-text="SC2Share.com hosts Starcraft 2 replay files under tiny URLs, no login required" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 </form>
 <script>
