--- a/index.html
+++ b/index.html
@@ -6,31 +6,27 @@
 <body>
 <center>
 <div id="content">
-<div id="spacer"></div>
 <p>
 <span id="sendmsg" style="font-size: 36px">Upload a Starcraft II replay</span>
 <p>
+<div id="spacer" style="height: 40px"></div>
 <form action="{{ upload_url }}" method="post" enctype="multipart/form-data">
 File:
 <input type="file" name="file">
 <input type="submit" value="Send">
 </form>
-<div id="spacer" style="height: 70px"></div>
+<div id="spacer" style="height: 20px"></div>
 <div id="explanation">
 We host Starcraft II replay files under a tiny URL that can be shared in
 forums, email and Twitter.
 <p>
-We're like bit.ly or Twitpic for Starcraft replay files.
+Simply use the controls above to select a replay file and you are good to go.
 <p>
 <a href="/about">Read more about us</a>
-<p>
-Less is more.
 </div>
-<div id="spacer" style="height: 70px"></div>
 
 </div>
 <div id="spacer" style="height: 20px"></div>
-<a href="http://twitter.com/share" class="twitter-share-button" data-url="http://sc2share.com/" data-text="SC2Share.com hosts Starcraft 2 replay files under tiny URLs, no login required" data-count="none">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 </center>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
